--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-< !DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 
   <head>
-    <h2> Hello World! </h2>
+    <head>
+    <img src ="NEW UoS Logo BLUE.svg" alt="Banner" width="900" height="300">
   </head>
 </html>
