--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <head>
     <head>
     <img src ="NEW UoS Logo BLUE.svg" alt="Banner" width="900" height="300">
+      <h1><b> ENG0018 Computer Laboratory 2024/25</b></h1>
+      <h2> Student URN: 6864555 </h2>
     </head>
   </head>
 </html>
