--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       margin-left: 250px;
     }
     </style>
+      </head>
 
       
       <meta meta="viewport" content="width=device-width,inital-scale=1">
