--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </style>
       
       </style>
+    <style>
     p.ex1 {
       margin-left: 250px;
     }
@@ -46,6 +47,7 @@
       <link rel="stylesheet" href="htpps://www.w3schools.com/w3css/4/w3.css">
       <style>
         .mySlides {display:none;}
+        <body style="background-color:#FFFFFF;margin-left:50px;">
       </style>
       </style>
     </head>
