--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <hr>
       <h2 style="font-family:calibri;"><b>Conference paper: Bridge Deck Repairs </b></h2>
       <h3 id="Abstract">Abstract</h3>
-      <p class="ex1>
+      <p class="ex1">
         <pre>
           Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an 
           intelligent machine through the interaction of an oracle with the machine system, over a sequence of 
