--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
           <th><t3>Table of contents</h3></th>
           </tr>
           <tr>
-            <td><a href="#Abstract">Abstract></td>
+            <td><a href="#Abstract">Abstract</td>
           </tr>
           <tr>
           <tr>
-            <td><a href="#Introduction">Introduction></td>
+            <td><a href="#Introduction">Introduction</td>
           </tr>
           <tr>         
           <tr>
-            <td><a href="#Analysis and discussion">Analysis and discussion></td>
+            <td><a href="#Analysis and discussion">Analysis and discussion</td>
           </tr>
           <tr>
           <tr>
-            <td><a href="#References">References></td>
+            <td><a href="#References">References</td>
           </tr>
           </table>
       <h3 id="Abstract"> Abstract </h3>
