--- a/index.html
+++ b/index.html
@@ -147,7 +147,15 @@
             background-color: #dddddd:
           }
 
+      <p id="date&time"></p>
+          <script>
+          // Javascript to display the data and time on my webpage 
 
+          const d = new Date(); 
+          document.getElementById("date&time).innerHTML = d;
+          </script> 
+
+        
           
 
 
