--- a/index.html
+++ b/index.html
@@ -147,13 +147,14 @@
             background-color: #dddddd:
           }
 
-      <p id="date&time"></p>
+      <p id="date&time">
           <script>
           // Javascript to display the data and time on my webpage 
 
           const d = new Date(); 
           document.getElementById("date&time).innerHTML = d;
           </script> 
+      </p> 
 
         
           
