--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
             <td><a href="#References">References</td>
           </tr>
           </table>
-            <p id="date&time">
+          <p id="date&time"></p>
           <script>
           // Javascript to display the data and time on my webpage 
 
           const d = new Date(); 
           document.getElementById("date&time).innerHTML = d;
           </script> 
-      </p> 
+      
       <h3 id="Abstract"> Abstract </h3>
       <p class="ex1">
         <pre>
