--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
           </tr>
           </table>
           <p id="date&time"></p>
-          <script>
+        <script>
           // Javascript to display the data and time on my webpage 
 
           const d = new Date(); 
-          document.getElementById("date&time).innerHTML = d;
-          </script>
+          document.getElementById("date&time").innerHTML = d;
+        </script>
       
       <h3 id="Abstract"> Abstract </h3>
       <p class="ex1">
