--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             button.style.backgroundColor = randomColor; 
           }
           // Add a click event listener to the button 
-          button.addEventListener("click",changeColor);
+          button.addEventListener("click",ChangeColor);
         </script>
       </body>
       
