--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <h1><b> ENG0018 Computer Laboratory 2024/25</b></h1>
       <h2> Student URN: 6864556 </h2>
       <hr>
-      <h2 style="font-family:calibri;"><b>Conference paper: Bridge Deck Repairs </b></h2>
+      <h2 style="font-family:calibri;"><b>Conference paper: Ethical Considerations in the integration of Wearable Technology and AI in healthcare  </b></h2>
     <!table of contents>
           <table>
  
@@ -22,11 +22,18 @@
           <tr>
             <td><a href="#Introduction">Introduction</td>
           </tr>
-          <tr>        
+          
           <tr>
-            <td><a href="#Analysis and discussion">Analysis and discussion</td>
+            <td><a href="#Algorthmic Bias and Discrimination">Algorithmic Bias and Discrimination</td>
           </tr>
           <tr>
+           <td><a href="#Autonomy and infomed consent">Autonomy and informed consent </td>
+          <tr>
+          <tr>
+           <td><a href="#Privacy and Data Security"> Privacy and Data Security </td>
+          <tr>
+          <tr>
+           <td><a href="#Conclusion"> Conclusion </td>
           <tr>
             <td><a href="#References">References</td>
           </tr>
