--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           classifier confidence to drop, as in Vlachos (2008).
         </pre>
         </p>
-        <h3 id="Analysis and discussion"> Analysis and Discussion</h3>
+        <h3 id="Algorthmic Bias and Discrimination"> Algorthmic Bias and Discrimination</h3>
       <p class="ex1">
         <pre>
           Bridge deck repair durability is the subject of much recent research as in
