--- a/index.html
+++ b/index.html
@@ -102,7 +102,23 @@
           Bridge deck repair durability is the subject of much recent research as in
           <a href=”https://www.icevirtuallibrary.com/doi/full/10.1680/jbren.21.00034”>Toshihiko et al (2023).</a> Table 1: Data on cost and lifespan of bridge repairs
         </pre>
-      <table>
+     <h3 id="Autonomy and infomed consent"> Autonomy and infomed consent </h3>
+      <p class="ex1">
+       <pre> 
+       </pre>
+    </p>
+     <h3 id="Privacy and Data Security">Privacy and Data Security</h3>
+      <p class="ex1">
+       <pre> 
+       </pre>
+      </p>
+     <h3 id="Conclusion">Conclusion</h3>
+      <p class="ex1">
+       <pre> 
+       </pre>
+      </p>
+     
+     <table>
         <tr>
           <th>£ Cost of repairs</th>
           <th>Lifespan of repairs (years)</th>
