--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
        <pre> 
         The pervasiveness of data collection through wearable devices has led to concerns regarding the security of data and loss of privacy.  Health data is considered the most sensitive category of personal information. Its growing commercial value has led to misuse for purposes such as targeted advertising, unlawful service acquisition and identity theft (Cilliers, 2019, Mone and Shakhlo, 2023). Users may be unaware of the extent of data being collected, stored and shared. This is because privacy policies are lengthy, complex and profuse, that conceal details of data collection and usage. Furthermore, data transmission of wearable devices compromises of wireless or Bluetooth technologies which are prone to modification as hackers can tamper with the content of exchanged data packets or alter the timestamp of them (Cilliers, 2019). The absence of stringent security protocols and encryption for data transmission and storage leaves users vulnerable to cyber-attacks and data breaches. Healthcare breaches "affecting 500 people or more were reported to the US Office for Civil Rights of the Department of Health and Human Services (HHS)", as shown in Figure 2 (note data is incomplete for 2023) (Mone and Shakhlo, 2023)      
        </pre>
+    <div id="chart_div"></div>
     <script type="text/javacript">
      function drawChart() {
        var data = newgoogle.visualization.DataTable();
