--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
      var options = {
       title:'HEALTHCAFRE DATA BREACHES OF 500 OR MORE RECORDS',
       hAxis:{title:'Number of data breaches'}, 
-      vAxis:{title:'Year'}.
+      vAxis:{title:'Year'},
      }; 
      var chart = newgoogle.visualization.ScatterChart(document.getElementById('chart_div')); 
      chart.draw(data,options);
