--- a/index.html
+++ b/index.html
@@ -123,68 +123,68 @@
      
      <table>
         <tr>
-          <th>Healthcare Date Breaches of 500 or more records</th>
-          <th>Years </th>
+          <th>Year </th>
+          <th>Healthcare Date Breaches of 500 or more records </th>
         </tr>
         <tr>
-          <td>18</td>
           <td>2009</td>
+          <td>18</td>
         </tr>
         <tr>
-          <td>199 </td>
-          <td>2010</td>
+          <td>2010 </td>
+          <td>199</td>
         </tr>
         <tr>
-          <td>200</td>
           <td>2011</td>
+          <td>200</td>
         </tr>
         <tr>
-          <td> 2018 </td>
-          <td>2012 </td>
+          <td> 2012 </td>
+          <td>218 </td>
         </tr>
         <tr>
-          <td>277 </td>
           <td>2013 </td>
+          <td>277 </td>
         </tr>
        <tr>
-          <td>314 </td>
           <td>2014 </td>
+          <td> 314 </td>
        </tr>
        <tr>
-          <td>270 </td>
           <td>2015 </td>
+          <td>270 </td>
        </tr>
        <tr>
-          <td>329 </td>
           <td>2016 </td>
+          <td>329 </td>
        </tr> 
        <tr>
-          <td>358 </td>
           <td>2017 </td>
+          <td>358 </td>
        </tr> 
         <tr>
-          <td>369 </td>
           <td>2018 </td>
+          <td> 369 </td>
        </tr> 
        <tr>
-          <td>512 </td>
           <td>2019 </td>
+          <td> 512 </td>
        </tr> 
         <tr>
+          <td> 2020 </td>
           <td>663 </td>
-          <td>2020 </td>
        </tr> 
           <tr>
-          <td>715 </td>
           <td>2021 </td>
+          <td>715 </td>
        </tr> 
         <tr>
+          <td> 2022 </td>
           <td>707 </td>
-          <td>2022 </td>
        </tr> 
         <tr>
-          <td>40 </td>
           <td>2023 </td>
+          <td>40 </td>
        </tr>       
      </table>
       <pre>
