--- a/index.html
+++ b/index.html
@@ -71,31 +71,16 @@
       <h3 id="Abstract"> Abstract </h3>
       <p class="ex1">
         <pre>
-          This paper represents a novel adapative learning strategy. The most accurate classification model from a hetrogenous
-          classifer pool is selecte at each learning epach. Our goal is to achiever greater incremental improvement in accuracy, compared
-          to using a single type of classification model throughout the process. The strategy is evalulated on benchmark data sets.
-          We further consider an application to texture classification problems in sonar mosaic imagery and compare it with non-adaptive
-          active learning and traditional machine learning approaches. Our results show that... We conclude that...
-        </pre>
+         Atrial fibrillation (AF) is a prevalent cardiac arrhythmia associated with significant health risks. Wearable technologies have revolutionised the detection of AF by enabling continuous monitoring and offering personalised healthcare solutions. However, their integration into healthcare raises ethical concerns such as implementations of algorithmic bias in photoplethysmography (PPG) sensors, autonomy and informed consent in empowering patients and the compromised data security collected. This essay concludes that inclusivity, transparency in data practices and robust data security measures are crucial to ensure the ethical and effective adoption of these technologies in healthcare.        </pre>
     </p>
      
       <h3 id="Introduction">Introduction</h3>
       <p class="ex1">
         <pre>
-          Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an
-          intelligent machine through the interaction of an oracle with the machine system, over a sequence of
-          learning epochs. A distinctive component in an active system is the querying strategy, used to sample
-          candidate training instances from a pool and evaluate them for informativeness, i.e., their potential
-          to improve the classification model. Various strategies have been proposed including; Query by
-          Committee (Seung et al., 1992), Monte Carlo estimation (Roy and McCallum, 2001), uncertainty
-          sampling (Lewis and Gale, 1994) and version space reduction (margin sampling) (Tong and Koller,
-          2001). Irrespective of how the most informative pattern instances are chosen at each epoch they are
-          presented for labeling, to a machine (database) or human oracle that has knowledge of the class
-          labels. After adding the newly labeled instances to the current training set, a revised model is
-          subsequently induced. A goal of this process is to achieve an efficient, incremental advancement of
-          learning at each epoch. The process is continued until some stopping criterion has been met, such as
-          reaching a stage where information from the selected instances is contrary to the model, causing the
-          classifier confidence to drop, as in Vlachos (2008).
+         Wearable technology provides innovative and cost-effective solutions for detecting AF, which is recognised as a global health challenge due to its rising prevalence and life-threatening complications. (Kornej et al., 2020). AF is a type of cardiac arrhythmia that is difficult to detect and often asymptomatic with high risks of ischemic strokes and myocardial infarction (Nemati et al., 2016). Traditionally, electrocardiogram (ECG) monitoring systems are used to detect arrhythmias. The use of this is limited to the duration of the appointment, whereas wearable devices enable continuous monitoring that empowers patients and healthcare providers (Duncker et al., 2021). 
+         
+Despite their transformative potential, integrating wearable technology and AI into healthcare raises critical ethical concerns. This essay explores the extent of how which algorithmic bias, informed consent, and autonomy in the use of data and data security impact the adoption of wearable technology into healthcare.
+
         </pre>
         </p>
         <h3 id="Algorthmic Bias and Discrimination"> Algorthmic Bias and Discrimination</h3>
