--- a/index.html
+++ b/index.html
@@ -71,19 +71,24 @@
       <h3 id="Abstract"> Abstract </h3>
       <p class="ex1">
         <pre>
-         Atrial fibrillation (AF) is a prevalent cardiac arrhythmia associated with significant health risks. 
-         Wearable technologies have revolutionised the detection of AF by enabling continuous monitoring and offering personalised healthcare solutions.
-         However, their integration into healthcare raises ethical concerns such as implementations of algorithmic bias in photoplethysmography (PPG) sensors,
-         autonomy and informed consent in empowering patients and the compromised data security collected. This essay concludes that inclusivity, 
-         transparency in data practices and robust data security measures are crucial to ensure the ethical and effective adoption of these technologies in healthcare.        </pre>
+         Atrial fibrillation (AF) is a prevalent cardiac arrhythmia associated with significant health risks. Wearable technologies have revolutionised the 
+         detection of AF by enabling continuous monitoring and offering personalised healthcare solutions. However, their integration into healthcare raises
+         ethical concerns such as implementations of algorithmic bias in photoplethysmography (PPG) sensors, autonomy and informed consent in empowering patients
+         and the compromised data security collected. This essay concludes that inclusivity, transparency in data practices and robust data security measures
+         are crucial to ensure the ethical and effective adoption of these technologies in healthcare.       
+        </pre>
       </p>
      
       <h3 id="Introduction">Introduction</h3>
       <p class="ex1">
         <pre>
-         Wearable technology provides innovative and cost-effective solutions for detecting AF, which is recognised as a global health challenge due to its rising prevalence and life-threatening complications. (Kornej et al., 2020). AF is a type of cardiac arrhythmia that is difficult to detect and often asymptomatic with high risks of ischemic strokes and myocardial infarction (Nemati et al., 2016). Traditionally, electrocardiogram (ECG) monitoring systems are used to detect arrhythmias. The use of this is limited to the duration of the appointment, whereas wearable devices enable continuous monitoring that empowers patients and healthcare providers (Duncker et al., 2021). 
-         
-Despite their transformative potential, integrating wearable technology and AI into healthcare raises critical ethical concerns. This essay explores the extent of how which algorithmic bias, informed consent, and autonomy in the use of data and data security impact the adoption of wearable technology into healthcare.
+         Wearable technology provides innovative and cost-effective solutions for detecting AF, which is recognised as a global health challenge due to its rising 
+         prevalence and life-threatening complications. (Kornej et al., 2020). AF is a type of cardiac arrhythmia that is difficult to detect and often asymptomatic 
+         with high risks of ischemic strokes and myocardial infarction (Nemati et al., 2016). Traditionally, electrocardiogram (ECG) monitoring systems are used to 
+         detect arrhythmias. The use of this is limited to the duration of the appointment, whereas wearable devices enable continuous monitoring that empowers
+         patients and healthcare providers (Duncker et al., 2021). Despite their transformative potential, integrating wearable technology and AI into healthcare
+         raises critical ethical concerns. This essay explores the extent of how which algorithmic bias, informed consent, and autonomy in the use of data and
+         data security impact the adoption of wearable technology into healthcare.
 
         </pre>
         </p>
