--- a/index.html
+++ b/index.html
@@ -94,18 +94,46 @@
         <h3 id="Algorthmic Bias and Discrimination"> Algorthmic Bias and Discrimination</h3>
       <p class="ex1">
         <pre>
+         A significant concern in the use of wearable technologies is the potential for algorithmic bias, which can lead to discrimination against certain 
+         racial and ethnic groups. Wearables that use PPG green light signalling sensors present a technical bias where its accuracy depletes when used for
+         people with darker skin tones. PPG relies on green light to detect biological signals beneath the skin, where skin tone affects the absorption of this light.           Green light is less able to penetrate deeper into the skin of individuals with darker pigmentation, leading to less accurate readings. Despite
+         products being advertised as suitable for all skin tones, they still exhibit bias and discrimination against individuals with darker skin tones.
+         This hinders the integrity of wearable devices as it reinforces racial disparities by not being accessible and accurate to all. 
+         (Colvonen et al. (2020), (Merid and Volpe, 2023)). Crucially, this represents an ethical violation, as advances in wearable technology 
+         should aim to improve healthcare access rather than exacerbate existing healthcare disparities.
+         
           Bridge deck repair durability is the subject of much recent research as in
           <a href=”https://www.icevirtuallibrary.com/doi/full/10.1680/jbren.21.00034”>Toshihiko et al (2023).</a> Table 1: Data on cost and lifespan of bridge repairs
         </pre>
      <h3 id="Autonomy and infomed consent"> Autonomy and infomed consent </h3>
       <p class="ex1">
        <pre> 
+        Wearable technology collects a myriad of psychological data which makes informed consent crucial to protect user autonomy. Exercise is a critical 
+        determinant  of health and lack of physical activity can contribute to morbidity and mortality associated with AF (Semaan et al., 2020).  Patients can 
+        utilise wearable devices to monitor psychological parameters such as level of physical activity and heart rate to encourage behavioural change towards a                healthier lifestyle. This aligns with the principle of the quantified self, where users feel empowered to take an active role in their own health management,   
+        and their autonomy is not limited. Promoting self-efficacy in this way supports a sustainable and innovative approach to healthcare: transitioning
+        medical management from the clinic to the home. This means that data collected by wearable devices can be used by both the patient and clinician to 
+        monitor health conditions and implement personalised interventions (Figure 1). The clinician treating the patient must strictly adhere to 
+        confidentiality protocols so that they don't commit medical malpractice and violate HIPAA (Rose, Kumar and Kass, 2023). 
+        Following this provides an innovative, cost-effective solution as it results in less outpatient visits for monitoring and patient empowerment as 
+        patients are more engaged with improving their health. (Duncker et al., 2021b)
+        Figure 1 (Adasuriya and Haldar, 2022)
        </pre>
+   <img src="Figure1.png" alt="Figure 1 (Adasuriya and Haldar, 2022)" width="900" height="300">
+   <pre>
+    For the patient autonomy to not be undermined, it is crucial that there is transparency, with the patient fully aware of the data that is shared with the clinician. By placing informed consent at the forefront of remote monitoring, wearable technology exemplifies a shift towards patient-centred healthcare that prioritises autonomy and engagement.    </pre>
     </p>
      <h3 id="Privacy and Data Security">Privacy and Data Security</h3>
       <p class="ex1">
        <pre> 
-        The pervasiveness of data collection through wearable devices has led to concerns regarding the security of data and loss of privacy.  Health data is considered the most sensitive category of personal information. Its growing commercial value has led to misuse for purposes such as targeted advertising, unlawful service acquisition and identity theft (Cilliers, 2019, Mone and Shakhlo, 2023). Users may be unaware of the extent of data being collected, stored and shared. This is because privacy policies are lengthy, complex and profuse, that conceal details of data collection and usage. Furthermore, data transmission of wearable devices compromises of wireless or Bluetooth technologies which are prone to modification as hackers can tamper with the content of exchanged data packets or alter the timestamp of them (Cilliers, 2019). The absence of stringent security protocols and encryption for data transmission and storage leaves users vulnerable to cyber-attacks and data breaches. Healthcare breaches "affecting 500 people or more were reported to the US Office for Civil Rights of the Department of Health and Human Services (HHS)", as shown in Figure 2 (note data is incomplete for 2023) (Mone and Shakhlo, 2023)      
+        The pervasiveness of data collection through wearable devices has led to concerns regarding the security of data and loss of privacy. Health data 
+        is considered the most sensitive category of personal information. Its growing commercial value has led to misuse for purposes such as targeted
+        advertising, unlawful service acquisition and identity theft (Cilliers, 2019, Mone and Shakhlo, 2023). Users may be unaware of the extent of data being                 collected, stored and shared. This is because privacy policies are lengthy, complex and profuse, that conceal details of data collection and usage.   
+        Furthermore, data transmission of wearable devices compromises of wireless or Bluetooth technologies which are prone to modification as hackers can 
+        tamper with the content of exchanged data packets or alter the timestamp of them (Cilliers, 2019). The absence of stringent security protocols and
+        encryption for data transmission and storage leaves users vulnerable to cyber-attacks and data breaches. Healthcare breaches "affecting 500 people or 
+        more were reported to the US Office for Civil Rights of the Department of Health and Human Services (HHS)", as shown in Figure 2 (note data is 
+        incomplete for 2023) (Mone and Shakhlo, 2023)      
        </pre>
       </p>
 
