--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
        <pre> 
         Wearable technology collects a myriad of psychological data which makes informed consent crucial to protect user autonomy. Exercise is a critical 
         determinant  of health and lack of physical activity can contribute to morbidity and mortality associated with AF (Semaan et al., 2020).  Patients can 
-        utilise wearable devices to monitor psychological parameters such as level of physical activity and heart rate to encourage behavioural change towards a                healthier lifestyle. This aligns with the principle of the quantified self, where users feel empowered to take an active role in their own health management,   
+        utilise wearable devices to monitor psychological parameters such as level of physical activity and heart rate to encourage behavioural change towards a               
+        healthier lifestyle. This aligns with the principle of the quantified self, where users feel empowered to take an active role in their own health management,   
         and their autonomy is not limited. Promoting self-efficacy in this way supports a sustainable and innovative approach to healthcare: transitioning
         medical management from the clinic to the home. This means that data collected by wearable devices can be used by both the patient and clinician to 
         monitor health conditions and implement personalised interventions (Figure 1). The clinician treating the patient must strictly adhere to 
@@ -119,9 +120,12 @@
         patients are more engaged with improving their health. (Duncker et al., 2021b)
         Figure 1 (Adasuriya and Haldar, 2022)
        </pre>
-   <img src="Figure1.png" alt="Figure 1 (Adasuriya and Haldar, 2022)" width="900" height="300">
-   <pre>
-    For the patient autonomy to not be undermined, it is crucial that there is transparency, with the patient fully aware of the data that is shared with the clinician. By placing informed consent at the forefront of remote monitoring, wearable technology exemplifies a shift towards patient-centred healthcare that prioritises autonomy and engagement.    </pre>
+       <img src="Figure1.png" alt="Figure 1 (Adasuriya and Haldar, 2022)" width="900" height="300">
+       <pre>
+        For the patient autonomy to not be undermined, it is crucial that there is transparency, with the patient fully aware of the data that is shared with the
+        clinician. By placing informed consent at the forefront of remote monitoring, wearable technology exemplifies a shift towards patient-centred healthcare
+        that prioritises autonomy and engagement.    
+       </pre>
     </p>
      <h3 id="Privacy and Data Security">Privacy and Data Security</h3>
       <p class="ex1">
@@ -204,10 +208,20 @@
           <td>40 </td>
        </tr>       
      </table>
-       
+     <p>
+      <pre>
+       Pivotally, data integrity being compromised presents a major ethical concern as for patients that use wearable devices for monitoring of AF and for their 
+       overall health. This is because their health is dependent on the security and accuracy of data and therefore breaches of privacy and misuse of information
+       could deter their adoption and undermine the benefits of this technology      
+      </pre>
+     </p> 
      <h3 id="Conclusion">Conclusion</h3>
       <p class="ex1">
        <pre> 
+        Wearable technology is a transformative tool in the detection and management of AF. It provides a cost and time-effective solution as it focuses on placing
+        the patient at the forefront and allows for personalised interventions that were previously unattainable. However, ethical concerns including algorithmic bias,
+        data privacy and the need for informed consent, underscore the use of wearable technology. It is imperative that inclusivity, transparency and robust
+        data protection mechanisms should be in place to harness the full potential of wearable technology.      
        </pre>
       </p>
   
