--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         patients are more engaged with improving their health. (Duncker et al., 2021b)
         Figure 1 (Adasuriya and Haldar, 2022)
        </pre>
-       <img src="Figure1.png" alt="Figure 1 (Adasuriya and Haldar, 2022)" width="900" height="300">
+       <img src="Figure1.png" alt="Figure 1 (Adasuriya and Haldar, 2022)" width="1200" height="300">
        <pre>
         For the patient autonomy to not be undermined, it is crucial that there is transparency, with the patient fully aware of the data that is shared with the
         clinician. By placing informed consent at the forefront of remote monitoring, wearable technology exemplifies a shift towards patient-centred healthcare
@@ -132,7 +132,8 @@
        <pre> 
         The pervasiveness of data collection through wearable devices has led to concerns regarding the security of data and loss of privacy. Health data 
         is considered the most sensitive category of personal information. Its growing commercial value has led to misuse for purposes such as targeted
-        advertising, unlawful service acquisition and identity theft (Cilliers, 2019, Mone and Shakhlo, 2023). Users may be unaware of the extent of data being                 collected, stored and shared. This is because privacy policies are lengthy, complex and profuse, that conceal details of data collection and usage.   
+        advertising, unlawful service acquisition and identity theft (Cilliers, 2019, Mone and Shakhlo, 2023). Users may be unaware of the extent of data being  
+        collected, stored and shared. This is because privacy policies are lengthy, complex and profuse, that conceal details of data collection and usage.   
         Furthermore, data transmission of wearable devices compromises of wireless or Bluetooth technologies which are prone to modification as hackers can 
         tamper with the content of exchanged data packets or alter the timestamp of them (Cilliers, 2019). The absence of stringent security protocols and
         encryption for data transmission and storage leaves users vulnerable to cyber-attacks and data breaches. Healthcare breaches "affecting 500 people or 
