--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
         <pre>
          A significant concern in the use of wearable technologies is the potential for algorithmic bias, which can lead to discrimination against certain 
          racial and ethnic groups. Wearables that use PPG green light signalling sensors present a technical bias where its accuracy depletes when used for
-         people with darker skin tones. PPG relies on green light to detect biological signals beneath the skin, where skin tone affects the absorption of this light.           Green light is less able to penetrate deeper into the skin of individuals with darker pigmentation, leading to less accurate readings. Despite
+         people with darker skin tones. PPG relies on green light to detect biological signals beneath the skin, where skin tone affects the absorption of this light.          
+         Green light is less able to penetrate deeper into the skin of individuals with darker pigmentation, leading to less accurate readings. Despite
          products being advertised as suitable for all skin tones, they still exhibit bias and discrimination against individuals with darker skin tones.
          This hinders the integrity of wearable devices as it reinforces racial disparities by not being accessible and accurate to all. 
          (Colvonen et al. (2020), (Merid and Volpe, 2023)). Crucially, this represents an ethical violation, as advances in wearable technology 
@@ -120,7 +121,7 @@
         patients are more engaged with improving their health. (Duncker et al., 2021b)
         Figure 1 (Adasuriya and Haldar, 2022)
        </pre>
-       <img src="Figure1.png" alt="Figure 1 (Adasuriya and Haldar, 2022)" width="1200" height="300">
+       <img src="Figure1.png" alt="Figure 1 (Adasuriya and Haldar, 2022)" width="1200" height="600">
        <pre>
         For the patient autonomy to not be undermined, it is crucial that there is transparency, with the patient fully aware of the data that is shared with the
         clinician. By placing informed consent at the forefront of remote monitoring, wearable technology exemplifies a shift towards patient-centred healthcare
@@ -225,20 +226,20 @@
         data protection mechanisms should be in place to harness the full potential of wearable technology.      
        </pre>
       </p>
-  
-      <pre>
-        Formatting some equations using MATHML
-        <!--MathML representations of the quadratic formula-->
-        <math xmins="http://www.w3.org/1998/Math/MathML">
-          <mrow>
-            <msup><mi> x </mi><mn> 2 </mn></msup>
-            <mo> + </mo><mi> 4 </mi><mo>&InvisibleTimes;</mo><mi>x</mi>
-            <mo> +</mo><mi> 4</mi>
-          <mo> = </mo>
-            <mi> 0 </mi>
-          </mrow>
-      
-      </pre>
+     
+     // <pre>
+      //  Formatting some equations using MATHML
+      //  <!--MathML representations of the quadratic formula-->
+      //  <math xmins="http://www.w3.org/1998/Math/MathML">
+      //    <mrow>
+      //      <msup><mi> x </mi><mn> 2 </mn></msup>
+      //      <mo> + </mo><mi> 4 </mi><mo>&InvisibleTimes;</mo><mi>x</mi>
+      //      <mo> +</mo><mi> 4</mi>
+      //    <mo> = </mo>
+      //      <mi> 0 </mi>
+      //    </mrow>
+      //
+      //</pre>
       <h3 id="References">References</h3>
       <p>
         <pre>
