--- a/index.html
+++ b/index.html
@@ -227,19 +227,6 @@
        </pre>
       </p>
      
-     <pre>
-      //  Formatting some equations using MATHML
-      //  <!--MathML representations of the quadratic formula-->
-      //  <math xmins="http://www.w3.org/1998/Math/MathML">
-      //    <mrow>
-      //      <msup><mi> x </mi><mn> 2 </mn></msup>
-      //      <mo> + </mo><mi> 4 </mi><mo>&InvisibleTimes;</mo><mi>x</mi>
-      //      <mo> +</mo><mi> 4</mi>
-      //    <mo> = </mo>
-      //      <mi> 0 </mi>
-      //    </mrow>
-      
-      </pre>
       <video scr="ENG0018Presentation-2.mp4" width="800" height="450" controls>
       </video>
       <h3 id="References">References</h3>
@@ -379,14 +366,16 @@
   function displayTotalWordCount() {
     // Calculate word count for each section and accumulate the total
     const IntroductionCount = displayWordCount("Introduction");
-    const AnalysisCount = displayWordCount("Abstract");
+    const AbstractCount = displayWordCount("Abstract");
     const Paragraph1Count = displayWordCount("Algorithmic_Bias_and_Discrimination");
     const Paragraph2Count = displayWordCount("Autonomy_and_informed_consent");
     const Paragraph3Count = displayWordCount("Privacy_and_Data_Security");
     const ConclusionCount = displayWordCount("Conclusion");   
     // Calculate the sum of all selected sections
-    const totalWordCount = IntroductionCount + AnalysisCount + Paragraph1Count + Paragraph2Count + Paragraph3Count + ConclusionCount;
+    const AbstractCount = AbstractCount 
+    const totalWordCount = IntroductionCount +  Paragraph1Count + Paragraph2Count + Paragraph3Count + ConclusionCount;
     // Display the total word count
+    document.getElementById("AbstractCount").innerText = 'Abstract word count: ${AbstractCount}';
     document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
   }
   // Run the function for specific sections and display total count when the page loads
