--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <p class="ex1">
         <pre id="Introduction">
          Wearable technology provides innovative and cost-effective solutions for detecting AF, which is recognised as a global health challenge due to its rising 
-         prevalence and life-threatening complications. (Kornej et al., 2020). AF is a type of cardiac arrhythmia that is difficult to detect and often asymptomatic 
+         prevalence and life-threatening complications. <a href="#References">(Kornej et al., 2020). </a> AF is a type of cardiac arrhythmia that is difficult to detect and often asymptomatic 
          with high risks of ischemic strokes and myocardial infarction (Nemati et al., 2016). Traditionally, electrocardiogram (ECG) monitoring systems are used to 
          detect arrhythmias. The use of this is limited to the duration of the appointment, whereas wearable devices enable continuous monitoring that empowers
          patients and healthcare providers (Duncker et al., 2021). Despite their transformative potential, integrating wearable technology and AI into healthcare
