--- a/index.html
+++ b/index.html
@@ -232,6 +232,13 @@
       <video scr="ENG0018Presentation-2.mp4" width="800" height="450" controls>
       </video>
       <h3 id="References">References</h3>
+      <ul>
+       <li id="Nesmati2016">
+        Nemati, S. et al. (2016) 'Monitoring and detecting atrial fibrillation using wearable technology,
+        'Monitoring and Detecting Atrial Fibrillation Using Wearable Technology
+        <a href="https://doi.org/10.1109/embc.2016.7591456"> see </a>
+        
+      </ul>
       <p>
         <pre>
           Angluin, D (1988), Queries and concept learning. Machine learning 2, (4), 319-342.
