--- a/index.html
+++ b/index.html
@@ -233,12 +233,27 @@
       </video>
       <h3 id="References">References</h3>
       <ul>
-       <li id="Nesmati2016">
-        Nemati, S. et al. (2016) 'Monitoring and detecting atrial fibrillation using wearable technology,
-        'Monitoring and Detecting Atrial Fibrillation Using Wearable Technology
-        <a href="https://doi.org/10.1109/embc.2016.7591456"> see </a>
-        
-      </ul>
+     <li id="Nemati2016">
+         Nemati, S., Deen, M. J., & Mondal, T. (2016). 
+         Monitoring and detecting atrial fibrillation using wearable technology. 
+         [DOI: <a href="https://doi.org/10.1109/embc.2016.7591456">10.1109/embc.2016.7591456</a>].
+     </li>
+     <li id="Kornej2020">
+         Kornej, J., Börschel, C. S., Benjamin, E. J., & Schnabel, R. B. (2020). 
+         Epidemiology of atrial fibrillation in the 21st century: 
+         Novel methods and new insights. 
+         *Circulation Research*, 127(1), 4–20. 
+         [DOI: <a href="https://doi.org/10.1161/CIRCRESAHA.120.316340">10.1161/CIRCRESAHA.120.316340</a>].
+     </li>
+     <li id="Cilliers2019">
+         Cilliers, L. (2019). 
+         Wearable devices in healthcare: Privacy and information security issues. 
+         *Health Information Management Journal*, 48(2), 68–76. 
+         [DOI: <a href="https://doi.org/10.1177/1833358318777715">10.1177/1833358318777715</a>].
+     </li>
+     </ul>
+   
+  
       <p>
         <pre>
           Angluin, D (1988), Queries and concept learning. Machine learning 2, (4), 319-342.
