--- a/index.html
+++ b/index.html
@@ -258,12 +258,35 @@
            'Smart Wearables for Cardiac Monitoring—Real-World Use beyond Atrial Fibrillation,' Sensors, 21(7), p. 2539.
            [DOI: <a href="https://doi.org/10.3390/s21072539">10.3390/s21072539</a>].
        </li>
-       <li id="AdasuriyaandHaldar,2022)">
+       <li id="AdasuriyaandHaldar2022)">
            Adasuriya and Haldar,2022
           'Remote monitoring of cardiac arrhythmias using wearable digital technology: paradigm shift or pipe dream?,
           ' European Journal of Arrhythmia & Electrophysiology, 8(1), p. 7. V
            [DOI: <a href="https://doi.org/10.17925/ejae.2022.8.1.7. ">10.17925/ejae.2022.8.1.7. </a>].
-       </li>V
+       </li>
+       <li id="MeridandVolpe2023">
+           Merid and Volpe, 2023
+          'Race correction and algorithmic bias in atrial fibrillation wearable technologies,' Health Equity, 7(1), pp. 817–824'Race correction and algorithmic bias in atrial fibrillation wearable technologies,' Health Equity, 7(1), pp. 817–824
+           [DOI: <a href="https://doi.org/10.1089/heq.2023.0034">10.1089/heq.2023.0034 </a>].
+       </li>
+       <li id="Colvonen2020">
+           Colvonen, P.J. et al. (2020) 'Limiting racial disparities and bias for wearable devices in health science research,' SLEEP, 43(10). Colvonen, P.J. et al. (2020) 'Limiting racial disparities and bias for wearable devices in health science research,' SLEEP, 43(10). 
+           [DOI: <a href="https://doi.org/10.1093/sleep/zsaa159">10.1093/sleep/zsaa159</a>].
+       </li>
+       <li id="Semaan2020">
+           (Semaan et al., 2020).) 'Physical activity and atrial fibrillation: Data from wearable fitness trackers,' Heart Rhythm, 17(5), pp. 842–846. ) 'Physical activity and atrial fibrillation: Data from wearable fitness trackers,' Heart Rhythm, 17(5), pp. 842–846.   
+           [DOI: <a href="https://doi.org/10.1016/j.hrthm.2020.02.013">10.1016/j.hrthm.2020.02.013</a>].
+       </li>
+       <li id="Rose2023">
+           Rose, R.V., Kumar, A. and Kass, J.S. (2023) 'Protecting privacy,' Neurologic Clinics, 41(3), pp. 513–522. 
+           [DOI: <a href="https://doi.org/10.1016/j.ncl.2023.03.007">10.1016/j.ncl.2023.03.007</a>].
+       </li>
+        <li id="Mone2023">
+          Mone, V. and Shakhlo, F. (2023) 'Health Data on the Go: Navigating Privacy Concerns with Wearable Technologies,' Legal Information Management, 23(3), pp. 179–188.v
+           [DOI: <a href="https://doi.org/10.1017/s1472669623000427">10.1017/s1472669623000427</a>].
+       </li>
+          
+       
      </ul>
        </pre>
  </p>
