--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
            Cilliers, L. (2019). 
            Wearable devices in healthcare: Privacy and information security issues. 
            *Health Information Management Journal*, 48(2), 68–76. 
-           [DOI: <a href="https://doi.org/10.1177/1833358318777715">10.1177/1833358318777715</a>].
+           [DOI: <a href="https://doi.org/10.1177/1833358319851684">10.1177/1833358319851684</a>].
        </li>
        <li id="Duncker2021">
            Duncker et al., 2021
@@ -262,19 +262,22 @@
            Adasuriya and Haldar,2022
           'Remote monitoring of cardiac arrhythmias using wearable digital technology: paradigm shift or pipe dream?,
           ' European Journal of Arrhythmia & Electrophysiology, 8(1), p. 7. V
-           [DOI: <a href="https://doi.org/10.17925/ejae.2022.8.1.7. ">10.17925/ejae.2022.8.1.7. </a>].
+           [DOI: <a href="https://doi.org/10.17925/ejae.2022.8.1.7 ">10.17925/ejae.2022.8.1.7 </a>].
        </li>
        <li id="MeridandVolpe2023">
            Merid and Volpe, 2023
-          'Race correction and algorithmic bias in atrial fibrillation wearable technologies,' Health Equity, 7(1), pp. 817–824'Race correction and algorithmic bias in atrial fibrillation wearable technologies,' Health Equity, 7(1), pp. 817–824
+          'Race correction and algorithmic bias in atrial fibrillation wearable technologies,' Health Equity, 7(1), pp. 817–824'Race correction and algorithmic bias in
+        atrial fibrillation wearable technologies,' Health Equity, 7(1), pp. 817–824
            [DOI: <a href="https://doi.org/10.1089/heq.2023.0034">10.1089/heq.2023.0034 </a>].
        </li>
        <li id="Colvonen2020">
-           Colvonen, P.J. et al. (2020) 'Limiting racial disparities and bias for wearable devices in health science research,' SLEEP, 43(10). Colvonen, P.J. et al. (2020) 'Limiting racial disparities and bias for wearable devices in health science research,' SLEEP, 43(10). 
+           Colvonen, P.J. et al. (2020) 'Limiting racial disparities and bias for wearable devices in health science research,' SLEEP, 43(10). Colvonen, P.J. et al. (2020)
+        'Limiting racial disparities and bias for wearable devices in health science research,' SLEEP, 43(10). 
            [DOI: <a href="https://doi.org/10.1093/sleep/zsaa159">10.1093/sleep/zsaa159</a>].
        </li>
        <li id="Semaan2020">
-           (Semaan et al., 2020).) 'Physical activity and atrial fibrillation: Data from wearable fitness trackers,' Heart Rhythm, 17(5), pp. 842–846. ) 'Physical activity and atrial fibrillation: Data from wearable fitness trackers,' Heart Rhythm, 17(5), pp. 842–846.   
+           (Semaan et al., 2020).) 'Physical activity and atrial fibrillation: Data from wearable fitness trackers,' Heart Rhythm, 17(5), pp. 842–846. ) 'Physical activity
+        and atrial fibrillation: Data from wearable fitness trackers,' Heart Rhythm, 17(5), pp. 842–846.   
            [DOI: <a href="https://doi.org/10.1016/j.hrthm.2020.02.013">10.1016/j.hrthm.2020.02.013</a>].
        </li>
        <li id="Rose2023">
@@ -282,7 +285,8 @@
            [DOI: <a href="https://doi.org/10.1016/j.ncl.2023.03.007">10.1016/j.ncl.2023.03.007</a>].
        </li>
         <li id="Mone2023">
-          Mone, V. and Shakhlo, F. (2023) 'Health Data on the Go: Navigating Privacy Concerns with Wearable Technologies,' Legal Information Management, 23(3), pp. 179–188.v
+          Mone, V. and Shakhlo, F. (2023) 'Health Data on the Go: Navigating Privacy Concerns with Wearable Technologies,' Legal Information Management, 23(3),
+         pp. 179–188.
            [DOI: <a href="https://doi.org/10.1017/s1472669623000427">10.1017/s1472669623000427</a>].
        </li>
           
